Performance Enhancements:
Used char vs. String where appropriate, as char is more efficient.

Used Integer.valueOf() vs. new Integer() in order to prevent unnecessary object creation.


SVN-Revision: 136